--- a/hugo.yaml
+++ b/hugo.yaml
@@ -18,8 +18,18 @@ services:
     googleAnalytics:
         id:
 
+
+# 更新时间：优先读取git时间 -> git时间不存在，就读取本地文件修改时间
+frontmatter:
+  lastmod:
+    - :git
+    - :fileModTime
+
+# 允许获取Git信息		
+enableGitInfo: true
+
 pagination:
-    pagerSize: 3
+    pagerSize: 4
 
 permalinks:
     post: /p/:slug/
@@ -58,88 +68,19 @@ params:
 
     comments: # 最后在添加 评论系统
         enabled: true
-        provider: disqus
-
-        disqusjs:
-            shortname:
-            apiUrl:
-            apiKey:
-            admin:
-            adminLabel:
-
-        utterances:
-            repo:
-            issueTerm: pathname
-            label:
-
-        beaudar:
-            repo:
-            issueTerm: pathname
-            label:
-            theme:
-
-        remark42:
-            host:
-            site:
-            locale:
-
-        vssue:
-            platform:
-            owner:
-            repo:
-            clientId:
-            clientSecret:
-            autoCreateIssue: false
-
-        # Waline client configuration see: https://waline.js.org/en/reference/component.html
-        waline:
-            serverURL:
-            lang:
-            pageview:
-            emoji:
-                - https://unpkg.com/@waline/emojis@1.0.1/weibo
-            requiredMeta:
-                - name
-                - email
-                - url
-            locale:
-                admin: Admin
-                placeholder:
-
-        twikoo:
-            envId:
-            region:
-            path:
-            lang:
-
-        # See https://cactus.chat/docs/reference/web-client/#configuration for description of the various options
-        cactus:
-            defaultHomeserverUrl: "https://matrix.cactus.chat:8448"
-            serverName: "cactus.chat"
-            siteName: "" # You must insert a unique identifier here matching the one you registered (See https://cactus.chat/docs/getting-started/quick-start/#register-your-site)
+        provider: giscus
 
         giscus:
-            repo:
-            repoID:
-            category:
-            categoryID:
-            mapping:
-            lightTheme:
-            darkTheme:
+            repo: "WASIDJ/wasidj.github.io"
+            repoID: "R_kgDOQ6dAPA"
+            category: "Announcements"
+            categoryID: "DIC_kwDOQ6dAPM4C1ERt"
+            mapping: "pathname"
+            lightTheme: "preferred_color_scheme"
+            darkTheme: "preferred_color_scheme"
             reactionsEnabled: 1
             emitMetadata: 0
 
-        gitalk:
-            owner:
-            admin:
-            repo:
-            clientID:
-            clientSecret:
-            proxy:
-
-        cusdis:
-            host:
-            id:
     widgets: # 自己有时间去 FrameWork/themes/hugo-theme-stack/layouts 目录中DIY
         homepage:
             - type: search
@@ -147,6 +88,10 @@ params:
               params:
                   limit: 5
             - type: categories
+              params:
+                  limit: 10
+
+            - type: tag-cloud
               params:
                   limit: 10
         page:
