--- a/hugo.yaml
+++ b/hugo.yaml
@@ -169,7 +169,7 @@ markup:
                           - \)
         renderer:
             ## Set to true if you have HTML content inside Markdown
-            unsafe: true
+            www
     tableOfContents:
         endLevel: 4
         ordered: true
